# Squeezer

./: .gitignore  .replit  Cargo.toml  README.md  build.rs  rusty-tags.vi
.github/workflows/: rust.yml
benches/: bench_leadsim.rs  bench_payoff.rs  my_benchmark.rs
dds/: Cargo.toml  build.rs  dump.txt  rust-analyzer.json
dds/src/: analyseplay.rs  ddserror.rs  deal.rs  doubledummy.rs  future_tricks.rs  lib.rs  par.rs  solver.rs  tables.rs  traits.rs  utils.rs
dds/src/bindings/: analyseplay.rs  ddserror.rs  ddsffi.rs  deal.rs  doubledummy.rs  ffi.rs  future_tricks.rs  mod.rs  solver.rs  tables.rs  traits.rs  utils.rs
dds/tests/: analyseplay.rs  deal.rs
dds/tests/setup/: mod.rs
rusty_dealer_macros/: Cargo.toml
rusty_dealer_macros/src/: lib.rs
squeezer_macros/: Cargo.toml
squeezer_macros/src/: lib.rs
src/: analyse_performance.rs  bbohelpers.rs  card.rs  contract.rs  dds.rs  ddsffi.rs  deal.rs  dealproduction.rs  error.rs  evaluator.rs  falsemain.rs  hand.rs  lib.rs  linparser.rs  main.rs  parse.rs  parser.rs  payoff.rs  performance_analysis.rs  realmain.rs  shape.rs  simulation.rs  smartstack.rs  usedtobemain.rs  utils.rs
src/bbo/: mod.rs
src/bbo_async/: mod.rs
src/shapeparser/: interpreter.rs  mod.rs  parser.rs  scanner.rs
src/simulation/: lead_sim.rs  mod.rs  payoff.rs
tests/: deal_generation.rs  performance_analysis_test.rs  simulation.rs  test.rs
