[package]
name = "squeezer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = { version = "*" }
rand = "*"
colored = "*"
itertools = "*"
serde = { version = "1.0", features = ["derive"], optional = true }
reqwest = { version = "*", features = ["cookies", "blocking"], optional = true }
time = { version = "*", optional = true }
regex = { version = "1", optional = true }
ureq = { version = "*", features = ["cookies"], optional = true }
squeezer_macros = { path = "squeezer_macros" }
dds = { path = "dds", optional = true }
bitvec = { version = "*", features = ["atomic", "std"] }
safe_arch = "*"

[features]
default = ["lin", "dds", "bbo_async"]
bbo = ["dep:time", "dep:ureq", "dep:regex"]
bbo_async = ["dep:time", "dep:regex", "dep:reqwest"]
lin = ["dep:regex"]
dds = ["dep:dds"]
serde = ["dep:serde", "dds?/serde", "bitvec/serde"]

[dev-dependencies]
criterion = { version = "*", features = ["html_reports"] }

[[bench]]
name = "bench_payoff"
harness = false

[[bench]]
name = "my_benchmark"
harness = false

[[bench]]
name = "bench_leadsim"
harness = false
